demos/style/igniteui-theme.scss
@import '../lib/core/styles/themes/index';

$exclude: (
    // igx-avatar,
    // igx-badge,
    // igx-button,
    // igx-button-group,
    // igx-calendar,
    // igx-card,
    // igx-carousel,
    // igx-checkbox,
    // igx-date-picker,
    // igx-dialog,
    // igx-grid,
    // igx-filtering,
    // igx-icon,
    // igx-form-group,
    // igx-input-group,
    // igx-list,
    // igx-navbar,
    // igx-nav-drawer,
    // igx-paginator,
    // progress-linear,
    // progress-circular,
    // igx-radio,
    // igx-ripple,
    // igx-slider,
    // igx-snackbar,
    // igx-switch,
    // igx-bottom-nav,
    // igx-toast
);
// Generating a palette
@include igx-core();
@include igx-theme($default-palette, $exclude);

$my-tabs-theme: igx-tabs-theme(
    $item-text-color: rgba(255, 255, 255, .8),
    $item-hover-color: rgba(255, 255, 255, .8),

    $item-background: igx-color($default-palette, 'primary', 500),
    $item-hover-background: igx-color($default-palette, 'primary', 400),

    $item-active-background: igx-color($default-palette, 'primary', 600),
    $indicator-color: #fbb13c,

    $button-color: rgba(255, 255, 255, .8),
    $button-background: igx-color($default-palette, 'primary', 500),
    $button-hover-background: igx-color($default-palette, 'primary', 600),
    $button-hover-color: #fff
);

.items-wrapper__item--blue {
    @include igx-tabs($my-tabs-theme);
}


// @mixin gen-color-class($name, $variant, $prefix, $suffix) {
//     $prefix: if($prefix, '#{$prefix}-', '');
//     $suffix: if($suffix, '-#{$suffix}', '');

//     .#{$prefix}#{$name}-#{$variant}#{$suffix} {
//         @content;
//     }
// }

// @mixin gen-color-classes($prop, $prefix, $suffix) {
//     @each $palette-name, $sub-palette in $default-palette {
//         @each $variant, $color in $sub-palette {
//             @if type-of($color) != 'map' {
//                 @include gen-color-class($palette-name, $variant, $prefix, $suffix) {
//                     #{$prop}: $color;
//                 }
//             }
//         }
//     }
// }

// @mixin igx-color-classes($prop, $suffix: null, $prefix: 'igx') {
//     @include gen-color-classes($prop, $prefix, $suffix);
// }

// @include igx-color-classes($prop: 'background-color', $prefix: 'my', $suffix: 'bg');
// @include igx-color-classes($prop: 'color');

